Bug 33750 - VIEWING - UI: Page not centered with optimal zoom
Summary: VIEWING - UI: Page not centered with optimal zoom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-31 01:39 UTC by zephyrus
Modified: 2012-01-04 02:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
like so (1.05 KB, patch)
2011-02-10 04:39 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zephyrus 2011-01-31 01:39:54 UTC
Hello,

I noticed a bug concerning the optimal zoom in Writer, present since Openoffice 2.4, shifted in the current Libreoffice 3.3.0 windows version.

Thig bug was known as Issue 99926 in Openoffice Bug Tracker:

http://www.openoffice.org/issues/show_bug.cgi?id=99926

This bug was classified as 'DEFECT', priority P3. I just point out that the problem remains in Libreoffice 3.3.0

The problem is the following: in Writer, if you switch from 'Entire page' or any other particular zoom ratio to 'Optimal', the page doesn't remind centered... 

It is really annoying if you often switch between 'Entire page', to see the general aspect of your document, and the 'optimal' view to edit it... For information, I am still on OOO 2.3 (the last version without this bug), and I am waiting this problem to be solved before upgrade... I would be happy to adopt Libreoffice when this bug will be fixed :)
Comment 1 Rainer Bielefeld Retired 2011-01-31 03:28:06 UTC
[Reproducible] with "LibreOffice 3.3.0 RC4 - WIN7  Home Premium (64bit) German UI  [OOO330m19 (build 6 / tag 3.3.0.4)]".
Modified S due to 
<http://www.openoffice.org/issues/show_bug.cgi?id=94623>

Caolan, can you help?
Comment 2 Caolán McNamara 2011-02-03 07:55:40 UTC
Ah, I couldn't see this bug for ages. 

For me I have to make writer the full width of the screen to see this problem.
Comment 3 Caolán McNamara 2011-02-10 04:39:40 UTC
Created attachment 43196 [details]
like so

When moving into 100% zoom the border is increased to a big number, when moving back to optimal the *old* border width is the one used for calculation, not the what-the-border-will-be value
Comment 4 Caolán McNamara 2011-02-10 04:47:23 UTC
fixed for 3.4 as writer/773d856c8ef2bf65aec25289cb0186d81d76f5f1
Comment 5 Winfried Donkers 2012-01-04 02:29:12 UTC
Possibly the problem is back (version 3.4.4, Windows):
Any writer document with 2 pages or more:
-place the cursor somewhere on page 2;
-zoom to 500% (or whatever large value);
-zoom back to 100%: the screen does not show what was originally visible, it may even have switched to page 1.

I have opened a new bug 44445 and am placing this comment to inform/alert the people who handled this bug/hack