Resolves: fdo#33750 #i94623# use optimal border width when zooming to optimal